HW for Seminar4

--- a/HW/hw4/src/main/resources/templates/readersTable.html
+++ b/HW/hw4/src/main/resources/templates/readersTable.html
@@ -7,6 +7,22 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Читатели</title>
 </head>
+<style>
+table {
+  width: auto;
+  border-collapse: collapse;
+  border: 1px solid aquamarine;
+}
+table th, table td {
+  padding: 0 40px;
+}
+table tr {
+  background: #d9fff2;
+}
+table th {
+  background: aquamarine;
+}
+</style>
 <body>
 <h1>Список читателей:</h1>
 <table>
